@@ -25,7 +25,9 @@
     <target name="compile" depends="init">
         <mkdir dir="${build.private}" />
     	<property name="build.compiler" value="javac1.7" />
-        <javac source="1.8" target="1.8" includeantruntime="false" classpathref="classpath" srcdir="${src.dir}" destdir="${build.private}" debug="true" />
+        <javac source="21" target="21" includeantruntime="false" classpathref="classpath" srcdir="${src.dir}" destdir="${build.private}" debug="true" />
+        <compilerarg value="--add-opens" />
+        <compilerarg value="java.base/java.lang=ALL-UNNAMED" />
         <property name="src.agent.path" value="com/amazon/kinesis/streaming/agent" />
         <copy todir="${build.private}/${src.agent.path}" failonerror="true">
             <fileset dir="${src.dir}/${src.agent.path}" excludes="**/*.java" />
